2012-04-13  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c (convert_number): Remove default_char argument,
	expect buf to point to it.  Remove maxdigits argument and compute
	it on the fly.
	(normalize_text): Unify calls to convert_number under the convert
	label.  For TEXT_REPLACEMENT add a backslash to the output if
	convert_number returns ch == '&'.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* testsuite/version.gin: Regenerate.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* basicdefs.h (P_): Remove.
	* sed/compile.c: Adjust.
	* sed/execute.c: Likewise.
	* sed/fmt.c: Likewise.
	* sed/sed.c: Likewise.
	* sed/sed.h: Likewise.
	* sed/utils.c: Likewise.
	* sed/utils.h: Likewise.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* basicdefs.h (FREE): Remove.
	* sed/compile.c: Adjust.
	* sed/execute.c: Adjust.
	* sed/regexp.c: Adjust.
	* sed/utils.c: Adjust, remove ck_free.
	* sed/utils.h: Adjust, remove ck_free.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* basicdefs.h (CAST, VCAST, VOID, MEMCPY, MEMMOVE): Rip out.
	* sed/compile.c: Adjust.
	* sed/execute.c: Adjust.
	* sed/regexp.c: Adjust.
	* sed/utils.c: Adjust.
	* sed/utils.h: Adjust.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c: Unconditionally compile for MBCS.
	* sed/mbcs.c: Unconditionally compile for MBCS.
	* sed/sed.h: Unconditionally compile for MBCS.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* basicdefs.h: Enjoy gnulib's headers.
	* sed/compile.c: Likewise.
	* sed/execute.c: Likewise.
	* sed/regexp.c: Likewise.
	* sed/sed.c: Likewise.
	* sed/sed.h: Likewise.
	* sed/utils.c: Likewise.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap.sh.in: Remove.
	* bootstrap.sh: Remove.
	* configure.ac: Do not create bootstrap.sh.
	* basicdefs.h: Remove guards.
	* sed/execute.c [BOOTSTRAP]: Remove guards.
	* sed/sed.c [BOOTSTRAP]: Remove guards.
	* sed/sed.h [BOOTSTRAP]: Remove guards.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* gnulib: Update.
